--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -30,7 +30,7 @@
                         {{ categorie_json | tojson | safe }}
                     </script>
 
-                    <form id="convocazioneForm" action="/api/convocazioni/add" method="post" novalidate>
+                    <form id="convocazioneForm" action="/add" method="post" novalidate>
                         <div class="row g-4">
                             <div class="col-md-6">
                                 <div class="form-floating">
