--- a/app/templates/partials/navbar.html
+++ b/app/templates/partials/navbar.html
@@ -8,16 +8,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Convocazioni</a>
+                    <a class="nav-link" href="/">Nuova</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/convocazioni">Convocazioni</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/gestione-sport">Gestione Sport</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/convocazioni">Lista Convocazioni</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/calendario.ics">Calendario</a>
+                    <a class="nav-link" href="webcal:/static/calendario.ics">Calendario</a>
                 </li>
             </ul>
         </div>
