--- a/app/templates/partials/navbar.html
+++ b/app/templates/partials/navbar.html
@@ -17,7 +17,7 @@
                     <a class="nav-link" href="/gestione-sport">Gestione Sport</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="webcal:/static/calendario.ics">Calendario</a>
+                    <a class="nav-link" href="webcal://ref.mferreira.ch/static/calendario.ics">Calendario</a>
                 </li>
             </ul>
         </div>
