--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container-fluid form-convocazione-wrapper mt-5">
+<div class="container-fluid form-convocazione-wrapper">
     <div class="row justify-content-center">
         <div class="col-12 col-md-10 col-lg-8">
             <div class="card shadow-lg border-0 rounded-4 overflow-hidden">
